adiciona o quadro de pixels 5x5

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     </section>
     <button id="button-random-color">Cores aleatórias</button>
+    <section id="pixel-board"></section>
   </main>
 
   <script src="main.js"></script>
