adiciona o button para limpar o quadro

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     </section>
     <button id="button-random-color">Cores aleatórias</button>
+    <button id="clear-board">Limpar</button>
     <section id="pixel-board"></section>
   </main>
 
