adiciona input que muda o tamanho do board

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <main>
-    <section id="color-palette">
-
-    </section>
+    <section id="color-palette"></section>
     <button id="button-random-color">Cores aleatórias</button>
     <button id="clear-board">Limpar</button>
+    <input type="number" min="1" id="board-size"/>
+    <button id="generate-board">VQV</button>
     <section id="pixel-board"></section>
   </main>
-
   <script src="main.js"></script>
 </body>
 
