estiliza a página com css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   </header>
   <main>
     <section id="color-palette"></section>
-    <button id="button-random-color">Cores aleatórias</button>
-    <button id="clear-board">Limpar</button>
-    <input type="number" min="1" id="board-size"/>
-    <button id="generate-board">VQV</button>
+    <section id="config">
+      <button id="button-random-color">Cores aleatórias</button>
+      <button id="clear-board">Limpar</button>
+      <input type="number" min="1" id="board-size" value="5"/>
+      <button id="generate-board">VQV</button>
+    </section>
     <section id="pixel-board"></section>
   </main>
   <script src="main.js"></script>
