corrige pequenos bugs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="config">
       <button id="button-random-color">Cores aleatórias</button>
       <button id="clear-board">Limpar</button>
-      <input type="number" min="1" id="board-size" value="5"/>
+      <input type="number" min="1" id="board-size"/>
       <button id="generate-board">VQV</button>
     </section>
     <section id="pixel-board"></section>
